err/noseapp-workspace.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nose'...
Listing './lib/python3.5/site-packages/nose/ext'...
Listing './lib/python3.5/site-packages/nose/plugins'...
Listing './lib/python3.5/site-packages/nose/sphinx'...
Listing './lib/python3.5/site-packages/nose/tools'...
Listing './lib/python3.5/site-packages/nose-1.3.7.dist-info'...
Listing './lib/python3.5/site-packages/noseapp'...
Listing './lib/python3.5/site-packages/noseapp/app'...
Listing './lib/python3.5/site-packages/noseapp/case'...
Listing './lib/python3.5/site-packages/noseapp/core'...
Listing './lib/python3.5/site-packages/noseapp/core/runner'...
Listing './lib/python3.5/site-packages/noseapp/core/runner/performers'...
Listing './lib/python3.5/site-packages/noseapp/core/suite'...
Listing './lib/python3.5/site-packages/noseapp/core/suite/performers'...
Listing './lib/python3.5/site-packages/noseapp/ext'...
Compiling './lib/python3.5/site-packages/noseapp/exthook.py'...
***   File "./lib/python3.5/site-packages/noseapp/exthook.py", line 13
    raise tp, value, tb
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/noseapp/manage'...
Listing './lib/python3.5/site-packages/noseapp/plugins'...
Listing './lib/python3.5/site-packages/noseapp/suite'...
Listing './lib/python3.5/site-packages/noseapp/tools'...
Listing './lib/python3.5/site-packages/noseapp/utils'...
Listing './lib/python3.5/site-packages/noseapp-2.2.2.egg-info'...
Listing './lib/python3.5/site-packages/noseapp_workspace'...
Listing './lib/python3.5/site-packages/noseapp_workspace-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './man'...
Listing './man/man1'...
Listing './share'...
Listing './share/python-wheels'...
